# ash

./: .gitignore  CMakeLists.txt  logval.txt  readme.md  run.sh  to_do.md
my_stuff/: build_work2.sh  config.h  module.c  work_2.c
src/: bar.c  bar.h  commented_main.c  config.h  main.c  xwin.c  xwin.h
